# perfect-helloworld

./: .clang-format  .clang-tidy  .envrc  .gitignore  .pre-commit-config.yaml  Doxyfile  Doxyfile.in  LICENSE  README.md  REUSE.toml  flake.nix  meson.build  meson.options
.github/workflows/: ci.yml
docs/: Doxyfile.in  meson.build
hooks/: pre-commit
include/: meson.build  perfect-helloworld.h
include/helloworld/: helloworld.h
include/perfect-helloworld/: perfect-helloworld.h
scripts/: check-code-quality.sh  check-nix-flake.sh  fmt_json.sh  format-code.sh  format-meson.sh  run-clang-tidy.sh  run-cppcheck.sh  run-iwyu.sh  run-scan-build.sh
src/: helloworld.c  main.c  meson.build
src/cli/: main.c  meson.build
src/lib/: meson.build  perfect-helloworld.c
tests/: meson.build  test-perfect-helloworld.c
