# SPDX-FileCopyrightText: © 2025 Nikita Krasnov <nikita.nikita.krasnov@gmail.com>
#
# SPDX-License-Identifier: MIT

option(
    'docs',
    type: 'feature',
    value: 'disabled',
    description: 'Build and install API documentation',
)

option('tests', type: 'feature', value: 'enabled', description: 'Build tests')
