# SPDX-FileCopyrightText: © 2026 Nikita Krasnov <nikita.nikita.krasnov@gmail.com>
#
# SPDX-License-Identifier: MIT

test(
    'test-perfect-helloworld',
    executable(
        'test-perfect-helloworld',
        sources: files('test-perfect-helloworld.c'),
        dependencies: unity,
        link_with: lib,
        include_directories: inc,
    ),
)
